Dialer: support to show multiple device ids
Show all device IDs for multiple SIM cards when dial "*#06#"
in dialpad.

Change-Id: I1654c5949831bb3faba19f4ce87147dfef6df048

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -204,4 +204,5 @@
 
     <string name="call_log_show_all_slots">"所有卡"</string>
     <string name="call_log_all_calls_header">"所有通话"</string>
+    <string name="device_id">设备标识符</string>
 </resources>
