--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -812,4 +812,5 @@
 
     <string name="call_log_show_all_slots">All SIMs</string>
     <string name="call_log_all_calls_header">All calls</string>
+    <string name="device_id">Device Identifier</string>
 </resources>
