--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -810,4 +810,6 @@
     <!-- Label for the call settings section description [CHAR LIMIT=80]-->
     <string name="call_settings_description">Voicemail, call waiting, and others</string>
 
+    <string name="call_log_show_all_slots">All SIMs</string>
+    <string name="call_log_all_calls_header">All calls</string>
 </resources>
