Import translations. DO NOT MERGE
Change-Id: I1e13ea3980a6198951b9d9eacb1c75c69fe54f0d
Auto-generated-cl: translation import

--- a/res/values-eu-rES/strings.xml
+++ b/res/values-eu-rES/strings.xml
@@ -18,7 +18,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="applicationLabel" msgid="8490255569343340580">"Telefonoa"</string>
-    <string name="launcherDialer" msgid="8636288196618486553">"Telefonoa"</string>
+    <string name="launcherActivityLabel" msgid="1129729740601172692">"Deitu"</string>
     <string name="dialerIconLabel" msgid="6500826552823403796">"Telefonoa"</string>
     <string name="recentCallsIconLabel" msgid="1419116422359067949">"Deien erregistroa"</string>
     <string name="menu_sendTextMessage" msgid="6937343460284499306">"Bidali testu-mezua"</string>
@@ -130,7 +130,7 @@
     <string name="dialerKeyboardHintText" msgid="5401660096579787344">"Erabili teklatua markatzeko"</string>
     <string name="dialerDialpadHintText" msgid="5824490365898349041">"Markatu dei bat gehitzeko"</string>
     <string name="callDetailsDurationFormat" msgid="8157706382818184268">"<xliff:g id="MINUTES">%s</xliff:g> minutu <xliff:g id="SECONDS">%s</xliff:g> segundo"</string>
-    <string name="dialog_phone_call_prohibited_message" msgid="6554711866586660441">"Ez da deia bidali"</string>
+    <string name="dialog_phone_call_prohibited_message" msgid="6554711866586660441">"Ez da deia egin"</string>
     <string name="dialog_voicemail_not_ready_message" msgid="4384716252789515378">"Erantzungailua konfiguratzeko, joan Menua &gt; Ezarpenak atalera."</string>
     <string name="dialog_voicemail_airplane_mode_message" msgid="530922773669546093">"Erantzungailua entzuteko, Hegaldi modua desaktibatu behar duzu."</string>
     <string name="contact_list_loading" msgid="5488620820563977329">"Kargatzen…"</string>
@@ -138,7 +138,7 @@
     <string name="meid" msgid="6210568493746275750">"MEID"</string>
     <string name="simContacts_emptyLoading" msgid="6700035985448642408">"SIM txarteletik kargatzen…"</string>
     <string name="simContacts_title" msgid="27341688347689769">"SIM txarteleko kontaktuak"</string>
-    <string name="add_contact_not_available" msgid="1419207765446461366">"Eginbidea erabili ahal izateko, gaitu berriro Jendea aplikazioa."</string>
+    <string name="add_contact_not_available" msgid="2731922990890769322">"Eginbide hau erabiltzeko, gaitu Kontaktuak aplikazioa berriro."</string>
     <string name="voice_search_not_available" msgid="7580616740587850828">"Ahots bidezko bilaketa ez dago erabilgarri."</string>
     <string name="call_not_available" msgid="8941576511946492225">"Ezin da telefono-deirik egin Telefonoa aplikazioa desgaitu egin delako."</string>
     <string name="activity_not_available" msgid="8265265380537872585">"Ez dago hautatutako ekintza gauza dezakeen jarduerarik erabilgarri."</string>
@@ -182,7 +182,6 @@
     <string name="call_log_action_report" msgid="561229827189128879">"SALATU"</string>
     <string name="call_log_header_today" msgid="3225248682434212981">"Gaur"</string>
     <string name="call_log_header_yesterday" msgid="9139172458834033092">"Atzo"</string>
-    <string name="call_log_header_last_week" msgid="5197040511028258038">"Azken astekoak"</string>
     <string name="call_log_header_other" msgid="5769921959940709084">"Zaharrak"</string>
     <string name="call_detail_list_header" msgid="866455969433213220">"Deiak"</string>
     <string name="voicemail_speaker_on" msgid="209154030283487068">"Aktibatu bozgorailua."</string>
@@ -197,7 +196,7 @@
     <string name="sounds_and_vibrate_category_title" msgid="7589787045192519254">"Soinuak eta dardara"</string>
     <string name="ringtone_title" msgid="760362035635084653">"Telefonoaren tonua"</string>
     <string name="vibrate_on_ring_title" msgid="3362916460327555241">"Dardara deiak jasotzean ere"</string>
-    <string name="dtmf_tone_enable_title" msgid="6571449695997521615">"Markatze-teklatuaren tonuak"</string>
+    <string name="dtmf_tone_enable_title" msgid="6571449695997521615">"Markagailuaren tonuak"</string>
     <string name="other_settings_title" msgid="7976283601445863248">"Beste batzuk"</string>
     <string name="respond_via_sms_setting_title" msgid="1318281521087951580">"Erantzun bizkorrak"</string>
     <string name="call_settings_label" msgid="7416182166943714852">"Deien ezarpenak"</string>
