--- a/res/values-kn-rIN/strings.xml
+++ b/res/values-kn-rIN/strings.xml
@@ -18,7 +18,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="applicationLabel" msgid="8490255569343340580">"ಡಯಲರ್"</string>
-    <string name="launcherDialer" msgid="8636288196618486553">"ಫೋನ್"</string>
+    <string name="launcherActivityLabel" msgid="1129729740601172692">"ಫೋನ್"</string>
     <string name="dialerIconLabel" msgid="6500826552823403796">"ಫೋನ್"</string>
     <string name="recentCallsIconLabel" msgid="1419116422359067949">"ಕರೆಯ ಲಾಗ್‌"</string>
     <string name="menu_sendTextMessage" msgid="6937343460284499306">"ಪಠ್ಯ ಸಂದೇಶವನ್ನು ಕಳುಹಿಸು"</string>
@@ -106,10 +106,10 @@
     <string name="dialer_addAnotherCall" msgid="4205688819890074468">"ಕರೆಯನ್ನು ಸೇರಿಸಿ"</string>
     <string name="type_incoming" msgid="6502076603836088532">"ಒಳಬರುವ ಕರೆ"</string>
     <string name="type_outgoing" msgid="343108709599392641">"ಹೊರಹೋಗುವ ಕರೆ"</string>
-    <string name="type_missed" msgid="2720502601640509542">"ತಪ್ಪಿ ಹೋದ ಕರೆ"</string>
+    <string name="type_missed" msgid="2720502601640509542">"ಮಿಸ್ಡ್‌ ಕಾಲ್‌"</string>
     <string name="type_incoming_video" msgid="82323391702796181">"ಒಳಬರುವ ವೀಡಿಯೊ ಕರೆ"</string>
     <string name="type_outgoing_video" msgid="2858140021680755266">"ಹೊರಹೋಗುವ ವೀಡಿಯೊ ಕರೆ"</string>
-    <string name="type_missed_video" msgid="954396897034220545">"ತಪ್ಪಿದ ವೀಡಿಯೊ ಕರೆ"</string>
+    <string name="type_missed_video" msgid="954396897034220545">"ಮಿಸ್ಡ್‌ ವೀಡಿಯೊ ಕಾಲ್‌"</string>
     <string name="type_voicemail" msgid="5153139450668549908">"ಧ್ವನಿಮೇಲ್"</string>
     <string name="actionIncomingCall" msgid="6028930669817038600">"ಒಳಬರುವ ಕರೆಗಳು"</string>
     <string name="description_call_log_play_button" msgid="651182125650429846">"ಧ್ವನಿಮೇಲ್‌ ಪ್ಲೇ ಮಾಡಿ"</string>
@@ -130,7 +130,9 @@
     <string name="dialerKeyboardHintText" msgid="5401660096579787344">"ಡಯಲ್‌ ಮಾಡಲು ಕೀಬೋರ್ಡ್‌ ಬಳಸಿ"</string>
     <string name="dialerDialpadHintText" msgid="5824490365898349041">"ಕರೆಯನ್ನು ಸೇರಿಸಲು ಡಯಲ್‌ ಮಾಡಿ"</string>
     <string name="callDetailsDurationFormat" msgid="8157706382818184268">"<xliff:g id="MINUTES">%s</xliff:g> ನಿಮಿಷಗಳು <xliff:g id="SECONDS">%s</xliff:g> ಸೆಕೆಂಡುಗಳು"</string>
-    <string name="dialog_phone_call_prohibited_message" msgid="6554711866586660441">"ಕರೆ ಮಾಡಲಾಗಲಿಲ್ಲ."</string>
+    <!-- no translation found for dialog_phone_call_prohibited_message (6554711866586660441) -->
+    <!-- no translation found for dialog_phone_call_prohibited_message (4313552620858880999) -->
+    <skip />
     <string name="dialog_voicemail_not_ready_message" msgid="4384716252789515378">"ಧ್ವನಿಮೇಲ್‌ ಹೊಂದಿಸಲು, ಮೆನು &gt; ಸೆಟ್ಟಿಂಗ್‌ಗಳುಗೆ ಹೋಗಿ."</string>
     <!-- no translation found for dialog_voicemail_airplane_mode_message (530922773669546093) -->
     <skip />
@@ -139,7 +141,7 @@
     <string name="meid" msgid="6210568493746275750">"MEID"</string>
     <string name="simContacts_emptyLoading" msgid="6700035985448642408">"SIM ಕಾರ್ಡ್‌ನಿಂದ ಲೋಡ್‌ ಮಾಡಲಾಗುತ್ತಿದೆ…"</string>
     <string name="simContacts_title" msgid="27341688347689769">"SIM ಕಾರ್ಡ್‌ ಸಂಪರ್ಕಗಳು"</string>
-    <string name="add_contact_not_available" msgid="1419207765446461366">"ಈ ವೈಶಿಷ್ಟ್ಯವನ್ನು ಬಳಸಲು ಜನರ ಅಪ್ಲಿಕೇಶನ್‌ ಮರುಸಕ್ರಿಯಗೊಳಿಸಿ."</string>
+    <string name="add_contact_not_available" msgid="2731922990890769322">"ಈ ವೈಶಿಷ್ಟ್ಯವನ್ನು ಬಳಸಲು ಸಂಪರ್ಕಗಳ ಅಪ್ಲಿಕೇಶನ್ ಅನ್ನು ಮರು-ಸಕ್ರಿಯಗೊಳಿಸಿ."</string>
     <string name="voice_search_not_available" msgid="7580616740587850828">"ಧ್ವನಿ ಹುಡುಕಾಟ ಲಭ್ಯವಿಲ್ಲ."</string>
     <string name="call_not_available" msgid="8941576511946492225">"ಫೋನ್ ಅಪ್ಲಿಕೇಶನ್ ನಿಷ್ಕ್ರಿಯಗೊಳಿಸಲಾಗಿರುವುದರಿಂದ ಫೋನ್ ಕರೆ ಮಾಡಲು ಸಾಧ್ಯವಿಲ್ಲ."</string>
     <string name="activity_not_available" msgid="8265265380537872585">"ಆಯ್ಕೆಮಾಡಿದ ಕ್ರಮವನ್ನು ನಿರ್ವಹಿಸಲು ಯಾವುದೇ ಸ್ಥಾಪಿಸಿದ ಚಟುವಟಿಕೆ ಲಭ್ಯವಿಲ್ಲ."</string>
@@ -161,7 +163,7 @@
     <string name="search_shortcut_make_video_call" msgid="1265971685034465166">"ವೀಡಿಯೊ ಕರೆ ಮಾಡಿ"</string>
     <string name="recents_footer_text" msgid="7315554578957453359">"ಕರೆಯ ಪೂರ್ಣ ಇತಿಹಾಸವನ್ನು ವೀಕ್ಷಿಸಿ"</string>
     <string name="num_missed_calls" msgid="8081736535604293886">"<xliff:g id="NUMBER">%s</xliff:g> ಹೊಸ ತಪ್ಪಿದ ಕರೆಗಳು"</string>
-    <string name="speed_dial_empty" msgid="5476435149276295630">"ಸ್ಪೀಡ್ ಡಯಲ್ ಎಂಬುದು ನೀವು ಪದೇಪದೇ ಕರೆ ಮಾಡುವ \nಸಂಖ್ಯೆಗಳು ಮತ್ತು ಮೆಚ್ಚಿನವುಗಳಿಗೆ\n ಒಂದೇ ಸ್ಪರ್ಶದ ಡಯಲಿಂಗ್ ಆಗಿದೆ."</string>
+    <string name="speed_dial_empty" msgid="5476435149276295630">"ಸ್ಪೀಡ್ ಡಯಲ್ ಎಂದರೆ, ನೀವು ಪದೇಪದೇ ಕರೆ ಮಾಡುವ \nಸಂಖ್ಯೆಗಳು ಮತ್ತು ಮೆಚ್ಚಿನವುಗಳಿಗೆ\n ಒಂದೇ ಸ್ಪರ್ಶದಲ್ಲಿ ಡಯಲ್‌ ಮಾಡುವುದು."</string>
     <string name="all_contacts_empty" msgid="4536082452651392894">"ನೀವು ಯಾವುದೇ ಸಂಪರ್ಕಗಳನ್ನು ಹೊಂದಿಲ್ಲ."</string>
     <string name="contact_tooltip" msgid="7817483485692282287">"ಎಲ್ಲ ಸಂಖ್ಯೆಗಳನ್ನು ನೋಡಲು ಚಿತ್ರವನ್ನು ಟ್ಯಾಪ್‌ ಮಾಡಿ ಅಥವಾ ಮರುಕ್ರಮಗೊಳಿಸಲು ಒತ್ತಿ ಹಿಡಿದುಕೊಳ್ಳಿ"</string>
     <string name="description_dismiss" msgid="2146276780562549643">"ವಜಾಗೊಳಿಸಿ"</string>
@@ -171,7 +173,7 @@
     <string name="call_log_action_video_call" msgid="3818588654537490948">"ವೀಡಿಯೊ ಕರೆ"</string>
     <string name="call_log_action_voicemail" msgid="4978620572562925654">"ಆಲಿಸಿ"</string>
     <string name="call_log_action_details" msgid="6252596497021563115">"ವಿವರಗಳು"</string>
-    <string name="description_incoming_missed_call" msgid="2610535352863246949">"<xliff:g id="NAMEORNUMBER">%1$s</xliff:g>, <xliff:g id="TYPEORLOCATION">%2$s</xliff:g>, <xliff:g id="TIMEOFCALL">%3$s</xliff:g> ರಿಂದ ತಪ್ಪಿದ ಕರೆ."</string>
+    <string name="description_incoming_missed_call" msgid="2610535352863246949">"<xliff:g id="NAMEORNUMBER">%1$s</xliff:g>, <xliff:g id="TYPEORLOCATION">%2$s</xliff:g>, <xliff:g id="TIMEOFCALL">%3$s</xliff:g> ರಿಂದ ಮಿಸ್ಡ್‌ ಕಾಲ್‌."</string>
     <string name="description_incoming_answered_call" msgid="7206670204016969740">"<xliff:g id="NAMEORNUMBER">%1$s</xliff:g>, <xliff:g id="TYPEORLOCATION">%2$s</xliff:g>, <xliff:g id="TIMEOFCALL">%3$s</xliff:g> ರಿಂದ ಕರೆಗೆ ಉತ್ತರಿಸಲಾಗಿದೆ."</string>
     <string name="description_outgoing_call" msgid="3964211633673659733">"<xliff:g id="NAMEORNUMBER">%1$s</xliff:g>, <xliff:g id="TYPEORLOCATION">%2$s</xliff:g>, <xliff:g id="TIMEOFCALL">%3$s</xliff:g>.ಅವರಿಗೆ ಕರೆ"</string>
     <string name="description_call_back_action" msgid="3012837380108884260">"<xliff:g id="NAMEORNUMBER">%1$s</xliff:g> ಗೆ ಮರಳಿ ಕರೆ ಮಾಡಿ"</string>
@@ -183,7 +185,6 @@
     <string name="call_log_action_report" msgid="561229827189128879">"ವರದಿ"</string>
     <string name="call_log_header_today" msgid="3225248682434212981">"ಇಂದು"</string>
     <string name="call_log_header_yesterday" msgid="9139172458834033092">"ನಿನ್ನೆ"</string>
-    <string name="call_log_header_last_week" msgid="5197040511028258038">"ಕಳೆದ ವಾರ"</string>
     <string name="call_log_header_other" msgid="5769921959940709084">"ಹಳೆಯದು"</string>
     <string name="call_detail_list_header" msgid="866455969433213220">"ಕರೆ ಪಟ್ಟಿ"</string>
     <string name="voicemail_speaker_on" msgid="209154030283487068">"ಸ್ಪೀಕರ್ ಆನ್ ಮಾಡಿ."</string>
