--- a/res/values-ky-rKG/strings.xml
+++ b/res/values-ky-rKG/strings.xml
@@ -18,8 +18,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="applicationLabel" msgid="8490255569343340580">"Чалгыч"</string>
-    <!-- no translation found for launcherDialer (8636288196618486553) -->
-    <skip />
+    <string name="launcherActivityLabel" msgid="1129729740601172692">"Телефон"</string>
     <!-- no translation found for dialerIconLabel (6500826552823403796) -->
     <skip />
     <!-- no translation found for recentCallsIconLabel (1419116422359067949) -->
@@ -187,7 +186,7 @@
     <skip />
     <!-- no translation found for simContacts_title (27341688347689769) -->
     <skip />
-    <string name="add_contact_not_available" msgid="1419207765446461366">"Бул мүмкүнчүлүктү пайдалануу үчүн Кишилер колдонмосун кайра иштетишиңиз керек."</string>
+    <string name="add_contact_not_available" msgid="2731922990890769322">"Бул мүмкүнчүлүктү колдонуу үчүн Байланыштар колдонмосун кайра иштетиңиз."</string>
     <string name="voice_search_not_available" msgid="7580616740587850828">"Үн менен издөө иштебейт."</string>
     <string name="call_not_available" msgid="8941576511946492225">"Телефон колдонмосу өчүрүлгөндүктөн, чалуу мүмкүн болбой жатат."</string>
     <string name="activity_not_available" msgid="8265265380537872585">"Тандалган аракетти аткаруу үчүн талап кылынган колдонмо орнотулган эмес."</string>
@@ -231,7 +230,6 @@
     <string name="call_log_action_report" msgid="561229827189128879">"КАБАРЛОО"</string>
     <string name="call_log_header_today" msgid="3225248682434212981">"Бүгүн"</string>
     <string name="call_log_header_yesterday" msgid="9139172458834033092">"Кечээ"</string>
-    <string name="call_log_header_last_week" msgid="5197040511028258038">"Өткөн апта"</string>
     <string name="call_log_header_other" msgid="5769921959940709084">"Мурункураак"</string>
     <string name="call_detail_list_header" msgid="866455969433213220">"Чалуулар тизмеси"</string>
     <string name="voicemail_speaker_on" msgid="209154030283487068">"Катуу сүйлөткүч күйгүзүлгөн."</string>
