--- a/res/values-mk-rMK/strings.xml
+++ b/res/values-mk-rMK/strings.xml
@@ -18,7 +18,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="applicationLabel" msgid="8490255569343340580">"Бирач"</string>
-    <string name="launcherDialer" msgid="8636288196618486553">"Телефон"</string>
+    <string name="launcherActivityLabel" msgid="1129729740601172692">"Телефон"</string>
     <string name="dialerIconLabel" msgid="6500826552823403796">"Телефон"</string>
     <string name="recentCallsIconLabel" msgid="1419116422359067949">"Евиденција на повици"</string>
     <string name="menu_sendTextMessage" msgid="6937343460284499306">"Испрати текстуална порака"</string>
@@ -138,7 +138,7 @@
     <string name="meid" msgid="6210568493746275750">"MEID"</string>
     <string name="simContacts_emptyLoading" msgid="6700035985448642408">"Вчитување од СИМ картичка..."</string>
     <string name="simContacts_title" msgid="27341688347689769">"Контакти од СИМ картичка"</string>
-    <string name="add_contact_not_available" msgid="1419207765446461366">"Повторно овозможете ја апликацијата „Лица“ за да ја користите оваа карактеристика."</string>
+    <string name="add_contact_not_available" msgid="2731922990890769322">"За да ја користите оваа функција, овозможете ја апликацијата Контакти повторно."</string>
     <string name="voice_search_not_available" msgid="7580616740587850828">"Гласовното пребарување не е достапно."</string>
     <string name="call_not_available" msgid="8941576511946492225">"Не може да се воспостави телефонски повик, бидејќи апликацијата Телефон е оневозможена."</string>
     <string name="activity_not_available" msgid="8265265380537872585">"Немате достапна апликација за да се справите со избраното дејство."</string>
@@ -182,7 +182,6 @@
     <string name="call_log_action_report" msgid="561229827189128879">"ПРИЈАВИ"</string>
     <string name="call_log_header_today" msgid="3225248682434212981">"Денес"</string>
     <string name="call_log_header_yesterday" msgid="9139172458834033092">"Вчера"</string>
-    <string name="call_log_header_last_week" msgid="5197040511028258038">"Минатата седмица"</string>
     <string name="call_log_header_other" msgid="5769921959940709084">"Постари"</string>
     <string name="call_detail_list_header" msgid="866455969433213220">"Список на повици"</string>
     <string name="voicemail_speaker_on" msgid="209154030283487068">"Вклучете го звучникот."</string>
