--- a/res/values-mr-rIN/strings.xml
+++ b/res/values-mr-rIN/strings.xml
@@ -18,7 +18,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="applicationLabel" msgid="8490255569343340580">"डायलर"</string>
-    <string name="launcherDialer" msgid="8636288196618486553">"फोन"</string>
+    <string name="launcherActivityLabel" msgid="1129729740601172692">"फोन"</string>
     <string name="dialerIconLabel" msgid="6500826552823403796">"फोन"</string>
     <string name="recentCallsIconLabel" msgid="1419116422359067949">"कॉल लॉग"</string>
     <string name="menu_sendTextMessage" msgid="6937343460284499306">"मजकूर संदेश पाठवा"</string>
@@ -138,7 +138,7 @@
     <string name="meid" msgid="6210568493746275750">"MEID"</string>
     <string name="simContacts_emptyLoading" msgid="6700035985448642408">"सिम कार्ड मधून लोड करीत आहे..."</string>
     <string name="simContacts_title" msgid="27341688347689769">"सिम कार्ड संपर्क"</string>
-    <string name="add_contact_not_available" msgid="1419207765446461366">"या वैशिष्‍ट्याचा वापर करण्‍यासाठी लोक अनुप्रयोग पुन्‍हा-सक्षम करा."</string>
+    <string name="add_contact_not_available" msgid="2731922990890769322">"हे वैशिष्‍ट्य वापरण्‍यासाठी संपर्क अनुप्रयोग पुन्हा-सक्षम करा."</string>
     <string name="voice_search_not_available" msgid="7580616740587850828">"व्हॉइस शोध उपलब्ध नाही."</string>
     <string name="call_not_available" msgid="8941576511946492225">"फोन अनुप्रयोग अक्षम केला गेला असल्याने फोन कॉल करणे शक्य नाही."</string>
     <string name="activity_not_available" msgid="8265265380537872585">"निवडलेली क्रिया हाताळण्यासाठी कोणताही स्थापित क्रियाकलाप उपलब्ध नाही."</string>
@@ -182,7 +182,6 @@
     <string name="call_log_action_report" msgid="561229827189128879">"अहवाल द्या"</string>
     <string name="call_log_header_today" msgid="3225248682434212981">"आज"</string>
     <string name="call_log_header_yesterday" msgid="9139172458834033092">"काल"</string>
-    <string name="call_log_header_last_week" msgid="5197040511028258038">"मागील आठवडा"</string>
     <string name="call_log_header_other" msgid="5769921959940709084">"अधिक जुने"</string>
     <string name="call_detail_list_header" msgid="866455969433213220">"कॉल सूची"</string>
     <string name="voicemail_speaker_on" msgid="209154030283487068">"स्पीकर चालू करा."</string>
