--- a/res/values-ne-rNP/strings.xml
+++ b/res/values-ne-rNP/strings.xml
@@ -18,7 +18,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="applicationLabel" msgid="8490255569343340580">"डायलर"</string>
-    <string name="launcherDialer" msgid="8636288196618486553">"फोन"</string>
+    <string name="launcherActivityLabel" msgid="1129729740601172692">"फोन"</string>
     <string name="dialerIconLabel" msgid="6500826552823403796">"फोन"</string>
     <string name="recentCallsIconLabel" msgid="1419116422359067949">"कल लग"</string>
     <string name="menu_sendTextMessage" msgid="6937343460284499306">"पाठ सन्देश पठाउनुहोस्"</string>
@@ -106,7 +106,7 @@
     <string name="dialer_addAnotherCall" msgid="4205688819890074468">"कल थप्नुहोस्"</string>
     <string name="type_incoming" msgid="6502076603836088532">"आगमन कल"</string>
     <string name="type_outgoing" msgid="343108709599392641">"बहिर्गमन कल"</string>
-    <string name="type_missed" msgid="2720502601640509542">"मिस कल"</string>
+    <string name="type_missed" msgid="2720502601640509542">"छुटेको कल"</string>
     <string name="type_incoming_video" msgid="82323391702796181">"आगमन भिडियो कल"</string>
     <string name="type_outgoing_video" msgid="2858140021680755266">"बहिर्गमन भिडियो कल"</string>
     <string name="type_missed_video" msgid="954396897034220545">"छुटेको भिडियो कल"</string>
@@ -138,7 +138,7 @@
     <string name="meid" msgid="6210568493746275750">"MEID"</string>
     <string name="simContacts_emptyLoading" msgid="6700035985448642408">"SIM कार्डबाट लोड हुँदै"</string>
     <string name="simContacts_title" msgid="27341688347689769">"SIM कार्ड सम्पर्कहरू"</string>
-    <string name="add_contact_not_available" msgid="1419207765446461366">"यो सुविधा प्रयोग गर्नका लागि मानिसहरूको अनुप्रयोग पुनःसक्षम गर्नुहोस्।"</string>
+    <string name="add_contact_not_available" msgid="2731922990890769322">"यो सुविधा प्रयोग गर्न सम्पर्क अनुप्रयोग पुनःसक्षम गर्नुहोस्।"</string>
     <string name="voice_search_not_available" msgid="7580616740587850828">"ध्वनि खोज उपलब्ध छैन।"</string>
     <string name="call_not_available" msgid="8941576511946492225">"फोन अनुप्रयोग असक्षम गरिएकोले फोन गर्न सकिँदैन।"</string>
     <string name="activity_not_available" msgid="8265265380537872585">"चयन गरिएको कार्य चलाउन कुनै गतिविधि स्थापित उपलब्ध छैन।"</string>
@@ -150,7 +150,7 @@
     <string name="call_log_all_title" msgid="3566738938889333307">"सबै"</string>
     <string name="call_log_missed_title" msgid="4541142293870638971">"छुटेको"</string>
     <string name="call_log_voicemail_title" msgid="940422274047025948">"Voicemail"</string>
-    <string name="tab_speed_dial" msgid="7807567599021643864">"Speed Dial"</string>
+    <string name="tab_speed_dial" msgid="7807567599021643864">"स्पिड डायल"</string>
     <string name="tab_recents" msgid="929949073851377206">"हालैका"</string>
     <string name="tab_all_contacts" msgid="1410922767166533690">"सम्पर्कहरू"</string>
     <string name="favorite_hidden" msgid="5011234945140912047">"मनपर्नेहरूबाट हटाइयो"</string>
@@ -166,10 +166,10 @@
     <string name="description_dismiss" msgid="2146276780562549643">"खारेज गर्नुहोस्"</string>
     <string name="remove_contact" msgid="1080555335283662961">"हटाउँनुहोस्"</string>
     <string name="favorites_menu_all_contacts" msgid="992506284449891186">"सबै सम्पर्कहरू"</string>
-    <string name="call_log_action_call_back" msgid="4944463006859852473">"CALL BACK"</string>
+    <string name="call_log_action_call_back" msgid="4944463006859852473">"कल फर्काउने"</string>
     <string name="call_log_action_video_call" msgid="3818588654537490948">"VIDEO CALL"</string>
     <string name="call_log_action_voicemail" msgid="4978620572562925654">"LISTEN"</string>
-    <string name="call_log_action_details" msgid="6252596497021563115">"DETAILS"</string>
+    <string name="call_log_action_details" msgid="6252596497021563115">"जानकारी"</string>
     <string name="description_incoming_missed_call" msgid="2610535352863246949">"<xliff:g id="NAMEORNUMBER">%1$s</xliff:g>, <xliff:g id="TYPEORLOCATION">%2$s</xliff:g>, <xliff:g id="TIMEOFCALL">%3$s</xliff:g>बाट छुटेका कल।"</string>
     <string name="description_incoming_answered_call" msgid="7206670204016969740">"<xliff:g id="NAMEORNUMBER">%1$s</xliff:g>, <xliff:g id="TYPEORLOCATION">%2$s</xliff:g>, <xliff:g id="TIMEOFCALL">%3$s</xliff:g> बाट कलको जवाफ फर्काइयो।"</string>
     <string name="description_outgoing_call" msgid="3964211633673659733">"<xliff:g id="NAMEORNUMBER">%1$s</xliff:g>, <xliff:g id="TYPEORLOCATION">%2$s</xliff:g>, <xliff:g id="TIMEOFCALL">%3$s</xliff:g> मा कल गर्नुहोस्।"</string>
@@ -182,7 +182,6 @@
     <string name="call_log_action_report" msgid="561229827189128879">"REPORT"</string>
     <string name="call_log_header_today" msgid="3225248682434212981">"आज"</string>
     <string name="call_log_header_yesterday" msgid="9139172458834033092">"हिजो"</string>
-    <string name="call_log_header_last_week" msgid="5197040511028258038">"अन्तिम हप्ता"</string>
     <string name="call_log_header_other" msgid="5769921959940709084">"अझ पुरानो"</string>
     <string name="call_detail_list_header" msgid="866455969433213220">"कल सूची"</string>
     <string name="voicemail_speaker_on" msgid="209154030283487068">"स्पिकर खोल्नुहोस्।"</string>
