--- a/res/values-ta-rIN/strings.xml
+++ b/res/values-ta-rIN/strings.xml
@@ -18,8 +18,8 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="applicationLabel" msgid="8490255569343340580">"டயலர்"</string>
-    <string name="launcherDialer" msgid="8636288196618486553">"மொபைல்"</string>
-    <string name="dialerIconLabel" msgid="6500826552823403796">"மொபைல்"</string>
+    <string name="launcherActivityLabel" msgid="1129729740601172692">"ஃபோன்"</string>
+    <string name="dialerIconLabel" msgid="6500826552823403796">"ஃபோன்"</string>
     <string name="recentCallsIconLabel" msgid="1419116422359067949">"அழைப்புப் பதிவு"</string>
     <string name="menu_sendTextMessage" msgid="6937343460284499306">"உரைச் செய்தியை அனுப்பு"</string>
     <string name="recentCalls_callNumber" msgid="1756372533999226126">"<xliff:g id="NAME">%s</xliff:g> ஐ அழை"</string>
@@ -136,9 +136,9 @@
     <string name="contact_list_loading" msgid="5488620820563977329">"ஏற்றுகிறது..."</string>
     <string name="imei" msgid="3045126336951684285">"IMEI"</string>
     <string name="meid" msgid="6210568493746275750">"MEID"</string>
-    <string name="simContacts_emptyLoading" msgid="6700035985448642408">"SIM கார்டிலிருந்து ஏற்றுகிறது…"</string>
-    <string name="simContacts_title" msgid="27341688347689769">"SIM கார்டின் தொடர்புகள்"</string>
-    <string name="add_contact_not_available" msgid="1419207765446461366">"அம்சத்தைப் பயன்படுத்த நபர்கள் பயன்பாட்டை மீண்டும் இயக்கவும்."</string>
+    <string name="simContacts_emptyLoading" msgid="6700035985448642408">"சிம் கார்டிலிருந்து ஏற்றுகிறது…"</string>
+    <string name="simContacts_title" msgid="27341688347689769">"சிம் கார்டின் தொடர்புகள்"</string>
+    <string name="add_contact_not_available" msgid="2731922990890769322">"இந்த அம்சத்தைப் பயன்படுத்த, தொடர்புகள் பயன்பாட்டை மீண்டும் இயக்கவும்."</string>
     <string name="voice_search_not_available" msgid="7580616740587850828">"வீடியோ தேடல் இல்லை."</string>
     <string name="call_not_available" msgid="8941576511946492225">"Phone பயன்பாடு முடக்கப்பட்டுள்ளதால், ஃபோன் அழைப்பைச் செய்ய முடியாது."</string>
     <string name="activity_not_available" msgid="8265265380537872585">"தேர்ந்தெடுத்த செயலைச் செய்வதற்கான நிறுவப்பட்ட செயல்பாடு எதுவுமில்லை."</string>
@@ -182,7 +182,6 @@
     <string name="call_log_action_report" msgid="561229827189128879">"புகாரளி"</string>
     <string name="call_log_header_today" msgid="3225248682434212981">"இன்று"</string>
     <string name="call_log_header_yesterday" msgid="9139172458834033092">"நேற்று"</string>
-    <string name="call_log_header_last_week" msgid="5197040511028258038">"கடந்த வாரம்"</string>
     <string name="call_log_header_other" msgid="5769921959940709084">"பழையது"</string>
     <string name="call_detail_list_header" msgid="866455969433213220">"அழைப்பு பட்டியல்"</string>
     <string name="voicemail_speaker_on" msgid="209154030283487068">"ஸ்பீக்கரை இயக்கு."</string>
