--- a/res/values-ur-rPK/strings.xml
+++ b/res/values-ur-rPK/strings.xml
@@ -18,7 +18,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="applicationLabel" msgid="8490255569343340580">"ڈائلر"</string>
-    <string name="launcherDialer" msgid="8636288196618486553">"فون"</string>
+    <string name="launcherActivityLabel" msgid="1129729740601172692">"فون"</string>
     <string name="dialerIconLabel" msgid="6500826552823403796">"فون"</string>
     <string name="recentCallsIconLabel" msgid="1419116422359067949">"کال لاگ"</string>
     <string name="menu_sendTextMessage" msgid="6937343460284499306">"متنی پیغام ارسال کریں"</string>
@@ -138,7 +138,7 @@
     <string name="meid" msgid="6210568493746275750">"MEID"</string>
     <string name="simContacts_emptyLoading" msgid="6700035985448642408">"‏SIM کارڈ سے لوڈ ہو رہا ہے…"</string>
     <string name="simContacts_title" msgid="27341688347689769">"‏SIM کارڈ کے رابطے"</string>
-    <string name="add_contact_not_available" msgid="1419207765446461366">"‏یہ خصوصیت استعمال کرنے کیلئے People ایپلیکیشن دوبارہ فعال کریں۔"</string>
+    <string name="add_contact_not_available" msgid="2731922990890769322">"اس خصوصیت کو استعمال کرنے کیلئے رابطے ایپلیکیشن کو دوبارہ فعال کریں۔"</string>
     <string name="voice_search_not_available" msgid="7580616740587850828">"صوتی تلاش دستیاب نہیں ہے۔"</string>
     <string name="call_not_available" msgid="8941576511946492225">"فون کال نہیں کی جا سکتی ہے کیونکہ فون ایپلیکیشن کو غیر فعال کر دیا گیا ہے۔"</string>
     <string name="activity_not_available" msgid="8265265380537872585">"منتخب کردہ کارروائی کو ہینڈل کرنے کیلئے کوئی انسٹال کردہ سرگرمی دستیاب نہیں ہے۔"</string>
@@ -182,7 +182,6 @@
     <string name="call_log_action_report" msgid="561229827189128879">"اطلاع دیں"</string>
     <string name="call_log_header_today" msgid="3225248682434212981">"ﺁﺝ"</string>
     <string name="call_log_header_yesterday" msgid="9139172458834033092">"گزشتہ کل"</string>
-    <string name="call_log_header_last_week" msgid="5197040511028258038">"گزشتہ ہفتہ"</string>
     <string name="call_log_header_other" msgid="5769921959940709084">"قدیم تر"</string>
     <string name="call_detail_list_header" msgid="866455969433213220">"کال کی فہرست"</string>
     <string name="voicemail_speaker_on" msgid="209154030283487068">"اسپیکر کو آن کر دیں۔"</string>
