--- a/res/values-uz-rUZ/strings.xml
+++ b/res/values-uz-rUZ/strings.xml
@@ -18,7 +18,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="applicationLabel" msgid="8490255569343340580">"Tergich"</string>
-    <string name="launcherDialer" msgid="8636288196618486553">"Telefon"</string>
+    <string name="launcherActivityLabel" msgid="1129729740601172692">"Telefon"</string>
     <string name="dialerIconLabel" msgid="6500826552823403796">"Telefon"</string>
     <string name="recentCallsIconLabel" msgid="1419116422359067949">"Qo‘ng‘iroqlar jurnali"</string>
     <string name="menu_sendTextMessage" msgid="6937343460284499306">"Matn xabarini jo‘natish"</string>
@@ -138,7 +138,7 @@
     <string name="meid" msgid="6210568493746275750">"MEID"</string>
     <string name="simContacts_emptyLoading" msgid="6700035985448642408">"SIM kartadan yuklanmoqda…"</string>
     <string name="simContacts_title" msgid="27341688347689769">"SIM karta kontaktlari"</string>
-    <string name="add_contact_not_available" msgid="1419207765446461366">"Odamlar ilovasidan foydalanish uchun uni qayta yoqing."</string>
+    <string name="add_contact_not_available" msgid="2731922990890769322">"Ushbu funksiyadan foydalanish uchun Kontaktlar ilovasini qayta yoqing."</string>
     <string name="voice_search_not_available" msgid="7580616740587850828">"Ovozli qidiruv mavjud emas."</string>
     <string name="call_not_available" msgid="8941576511946492225">"Telefon ilovasi o‘chirib qo‘yilgani sababli telefon qo‘ng‘iroqlarini amalga oshirib bo‘lmaydi."</string>
     <string name="activity_not_available" msgid="8265265380537872585">"O‘rnatilgan ilovalardan hech biri tanlangan amalni bajara olmaydi."</string>
@@ -182,7 +182,6 @@
     <string name="call_log_action_report" msgid="561229827189128879">"GOOGLE’GA XABAR BERISH"</string>
     <string name="call_log_header_today" msgid="3225248682434212981">"Bugun"</string>
     <string name="call_log_header_yesterday" msgid="9139172458834033092">"Kecha"</string>
-    <string name="call_log_header_last_week" msgid="5197040511028258038">"O‘tgan hafta"</string>
     <string name="call_log_header_other" msgid="5769921959940709084">"Eskiroq"</string>
     <string name="call_detail_list_header" msgid="866455969433213220">"Qo‘ng‘iroqlar ro‘yxati"</string>
     <string name="voicemail_speaker_on" msgid="209154030283487068">"Karnayni yoqish."</string>
